Fix overlapping styles for btn-primary and styles from cookies warning

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -325,7 +325,7 @@
   color: #3072AD;
 }
 
-.btn-primary {
+.btn-blue {
   cursor: pointer;
   border-radius: 10px;
   padding: 5px 20px;
